--- a/src/global.css
+++ b/src/global.css
@@ -77,7 +77,7 @@ body {
 .Books-container:hover {
   background-color: transparent;
   box-shadow: 2px 0px 25px 4px var(--BlackColor);
-  text-shadow: 5px 6px 5px var(--textShadow);
+  text-shadow: 0px 0px 15px var(--textShadow);
 }
 
 .Book-img {
@@ -145,6 +145,28 @@ body {
   /* border: 5px solid rgb(47, 15, 229); */
 }
 
+.Book-container-details {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  border: 2px solid var(--BlackColor);
+  padding: 2rem;
+  /* margin: 3rem; */
+  border-radius: 5rem;
+  width: 60rem;
+  height: 40rem;
+  text-align: center;
+  background-color: var(--BooksContainer);
+  /* border: 5px solid rgb(47, 15, 229); */
+}
+
+#BookSection-details {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin: 3rem;
+}
+
 .Button-AddBook {
   color: white;
   background-color: transparent;
@@ -172,7 +194,7 @@ body {
 
 .Button-addtoFav {
   display: flex;
-  margin-left: 22rem;
+  margin-left: 10rem;
   /* border: 5px solid palevioletred; */
 }
 
@@ -231,4 +253,251 @@ body {
   color: white;
   font-size: 1rem;
   font-weight: 900;
+}
+
+#Header-nav {
+  background: linear-gradient(to right top, rgb(151, 106, 8), rgb(123, 78, 18));
+}
+
+main {
+  padding: 1.5rem;
+}
+
+@media only screen and (max-width: 2160px) {
+  .Categories-container {
+    color: var(--textColor);
+    display: flex;
+    align-items: center;
+    border-radius: 10%;
+    overflow: hidden;
+    height: 3rem;
+    gap: 1.2rem;
+    margin: 2rem 1rem;
+    font-size: 1.2rem;
+    backdrop-filter: blur(2px);
+  }
+
+  .link--link {
+    color: var(--textColor);
+    font-weight: 700;
+    text-decoration: none;
+  }
+
+  .link--link:hover {
+    color: var(--textColorShadow);
+    text-shadow: 5px 1px 4px var(--textShadow);
+  }
+
+  .Title-book {
+    font-family: "Lobster Two", sans-serif;
+    font-size: 20px;
+  }
+
+  .Books-container {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    list-style-type: none;
+    border: 2px solid var(--BlackColor);
+    margin: 0.9rem;
+    border-radius: 10%;
+    width: 20rem;
+    height: 30rem;
+    text-align: center;
+    background-color: var(--BooksContainer);
+  }
+
+  .Books-container:hover {
+    background-color: transparent;
+    box-shadow: 2px 0px 25px 4px var(--BlackColor);
+    text-shadow: 0px 0px 15px var(--textShadow);
+  }
+
+  .Book-img {
+    width: 8rem;
+    border-radius: 10%;
+    box-shadow: 0px 2px 3px 2px var(--ImageBookShadow);
+    margin: 0.9rem 0;
+  }
+  #Authorp {
+    padding-top: 2rem;
+    padding-bottom: 2rem;
+  }
+
+  .Container-books {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    margin-left: 3rem;
+  }
+
+  .List {
+    margin-left: 6rem;
+    font-family: "Lobster Two", sans-serif;
+    font-weight: 800;
+    font-size: 2rem;
+    text-decoration: underline;
+    text-shadow: 5px 6px 5px var(--textShadow);
+    backdrop-filter: blur(2px);
+  }
+
+  .link--link2 {
+    color: var(--BlackColor);
+    font-weight: 600;
+    text-decoration: none;
+    font-size: 0.8rem;
+    border: 2px solid black;
+    border-radius: 20px;
+    padding: 0.3rem;
+  }
+
+  .link--link2:hover {
+    box-shadow: 0px 0px 25px 8px var(--textShadow);
+    background-color: bisque;
+  }
+
+  .Book-img-cart {
+    width: 10rem;
+    height: 12rem;
+    border-radius: 10%;
+    border: 2px solid var(--BlackColor);
+    box-shadow: 0px 2px 25px 3px var(--BlackColor);
+  }
+
+  .Book-container {
+    display: flex;
+    flex-direction: column;
+    list-style-type: none;
+    /* gap: 2rem; */
+    border: 2px solid var(--BlackColor);
+    margin: 3rem;
+    border-radius: 5rem;
+    width: 60rem;
+    height: 40rem;
+    text-align: center;
+    background-color: var(--BooksContainer);
+    /* border: 5px solid rgb(47, 15, 229); */
+  }
+
+  .Book-container-details {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    border: 2px solid var(--BlackColor);
+    padding: 2rem;
+    /* margin: 3rem; */
+    border-radius: 5rem;
+    width: 60rem;
+    height: 40rem;
+    text-align: center;
+    background-color: var(--BooksContainer);
+    /* border: 5px solid rgb(47, 15, 229); */
+  }
+
+  #BookSection-details {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin: 3rem;
+  }
+
+  .Button-AddBook {
+    color: white;
+    background-color: transparent;
+    width: 10rem;
+    height: 1.7rem;
+    border-radius: 5rem;
+    box-shadow: 5px 0px 10px rgba(139, 69, 19, 0.8);
+    cursor: pointer;
+    font-weight: 700;
+  }
+
+  .Book-information-container {
+    display: flex;
+    align-items: center;
+    gap: 1rem;
+    /* border: 5px solid red; */
+    margin: 0.5rem 2rem;
+  }
+
+  .link-container {
+    display: flex;
+    /* border: 5px solid green; */
+    justify-content: space-around;
+  }
+
+  .Button-addtoFav {
+    display: flex;
+    margin-left: 10rem;
+    /* border: 5px solid palevioletred; */
+  }
+
+  .Book-info-cont {
+    display: flex;
+    flex-direction: column;
+    gap: 0.5rem;
+    margin-top: 2rem;
+    /* border: 5px solid rgb(37, 238, 221); */
+  }
+
+  .Information-Author {
+    /* border: 5px solid rgb(139, 58, 239); */
+    margin-left: 2rem;
+  }
+
+  .Category-Name {
+    font-size: 0.7rem;
+    padding-bottom: 2.5rem;
+  }
+
+  .Link-ebook {
+    text-decoration: none;
+    color: white;
+  }
+
+  .Button-addtoFav {
+    display: flex;
+    gap: 10rem;
+    margin-top: 3rem;
+  }
+
+  .Favorites {
+    padding-top: 2rem;
+    margin: 2rem;
+  }
+
+  .FavoritesTitle {
+    padding-bottom: 2rem;
+    font-family: "Lobster Two", sans-serif;
+    font-weight: 800;
+    font-size: 2rem;
+    text-decoration: underline;
+    text-shadow: 5px 6px 5px var(--textShadow);
+  }
+
+  .ButtonRemove {
+    text-decoration: none;
+    background-color: transparent;
+  }
+
+  .FavoritesLink {
+    text-decoration: none;
+    text-align: center;
+    padding-top: 2vh;
+    color: white;
+    font-size: 1rem;
+    font-weight: 900;
+  }
+
+  #Header-nav {
+    background: linear-gradient(
+      to right top,
+      rgb(151, 106, 8),
+      rgb(123, 78, 18)
+    );
+  }
+
+  main {
+    padding: 1.5rem;
+  }
 }
